outputs/main/reevo-qd_bpp_online_2025-08-01_04-13-41/problem_iter12_response2.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 69
    capacity is.
               ^
SyntaxError: invalid syntax
15
2
